--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@ a {
 
 .grid-container {
   display: grid;
+  grid-auto-flow: dense;
   grid-template-columns: repeat(6, auto);
   grid-gap: 2px;
 }
